--- a/Soloud/app/src/main/res/layout/fragment_categories.xml
+++ b/Soloud/app/src/main/res/layout/fragment_categories.xml
@@ -8,4 +8,60 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <RelativeLayout
+        android:id="@+id/tutorial_RL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/mySecondary"
+        android:padding="16dp">
+
+        <RelativeLayout
+            android:id="@+id/label_RL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/soloud_logo_IV"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_launcher1" />
+
+            <TextView
+                android:id="@+id/label_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@id/soloud_logo_IV"
+                android:layout_toRightOf="@id/soloud_logo_IV"
+                android:text="@string/welcome_to_soloud"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/description_TV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/label_RL"
+            android:layout_marginTop="16dp"
+            android:text="@string/categories_description"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/got_it_Btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/description_TV"
+            android:layout_marginTop="16dp"
+            android:text="@string/got_it" />
+
+    </RelativeLayout>
+
 </RelativeLayout>
