--- a/Soloud/app/src/main/res/layout/user_post_fragment1.xml
+++ b/Soloud/app/src/main/res/layout/user_post_fragment1.xml
@@ -1,138 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_layout">
+    android:background="@color/background_layout"
+    android:fillViewport="true">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar_layout"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/background_layout">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/details_CV"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="106dp"
-        app:cardBackgroundColor="#ffffff"
-        card_view:cardCornerRadius="4dp">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <RelativeLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/details_CV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="200dp">
-
-            <TextView
-                android:id="@+id/hashTags_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="24dp"
-                android:layout_marginRight="24dp"
-                android:gravity="center"
-                android:text="#fat #ugly #sumo #beatiful #i want to win #I am the fattest girl #ads #sloggy #underwear" />
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="106dp"
+            app:cardBackgroundColor="#ffffff"
+            card_view:cardCornerRadius="4dp">
 
             <RelativeLayout
-                android:id="@+id/check_in_RL"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/hashTags_TV"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:layout_marginTop="36dp">
-
-                <ImageView
-                    android:id="@+id/place_IV"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_centerVertical="true"
-                    app:srcCompat="@drawable/ic_place_black_24dp" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="200dp"
+                android:paddingBottom="24dp">
 
                 <TextView
-                    android:id="@+id/location_TV"
+                    android:id="@+id/hashTags_TV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_toEndOf="@+id/place_IV"
-                    android:layout_toRightOf="@+id/place_IV"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="16sp"
-                    android:text="Libido Cafe" />
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginRight="24dp"
+                    android:gravity="center"
+                    android:text="#fat #ugly #sumo #beatiful #i want to win #I am the fattest girl #ads #sloggy #underwear" />
 
-                <TextView
-                    android:id="@+id/address_TV"
+
+                <RelativeLayout
+                    android:id="@+id/check_in_RL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/hashTags_TV"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="36dp"
+                    android:gravity="center">
+
+
+                    <ImageView
+                        android:id="@+id/place_IV"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_centerVertical="true"
+                        app:srcCompat="@drawable/ic_place_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/location_TV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_toEndOf="@+id/place_IV"
+                        android:layout_toRightOf="@+id/place_IV"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16sp"
+                        tools:text="Libido Cafe" />
+
+                    <TextView
+                        android:id="@+id/address_TV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/location_TV"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginStart="16dp"
+                        android:layout_toEndOf="@id/place_IV"
+                        android:layout_toRightOf="@id/place_IV"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:textSize="14sp"
+                        tools:text="Maizwnos 108" />
+
+                </RelativeLayout>
+
+                <Button
+                    android:id="@+id/share_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/location_TV"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_toEndOf="@id/place_IV"
-                    android:layout_toRightOf="@id/place_IV"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textSize="14sp"
-                    android:text="Maizwnos 108" />
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="24dp"
+                    android:background="@drawable/my_facebook_drawable"
+                    android:drawableLeft="@drawable/com_facebook_button_icon_white"
+                    android:drawablePadding="16dp"
+                    android:drawableStart="@drawable/com_facebook_button_icon_white"
+                    android:paddingEnd="16dp"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="16dp"
+                    android:paddingStart="8dp"
+                    android:text="@string/share_to_facebook"
+                    android:textAllCaps="false"
+                    android:textColor="#ffffff" />
+
 
             </RelativeLayout>
 
-            <Button
-                android:id="@+id/share_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="24dp"
-                android:background="@drawable/my_facebook_drawable"
-                android:drawableLeft="@drawable/com_facebook_button_icon_white"
-                android:drawablePadding="16dp"
-                android:drawableStart="@drawable/com_facebook_button_icon_white"
-                android:paddingEnd="16dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="16dp"
-                android:paddingStart="8dp"
-                android:text="@string/share_to_facebook"
-                android:textAllCaps="false"
-                android:textColor="#ffffff" />
+        </android.support.v7.widget.CardView>
 
-        </RelativeLayout>
+        <android.support.v7.widget.CardView
+            android:id="@+id/photo_CV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="54dp"
+            app:cardBackgroundColor="#000000"
+            card_view:cardCornerRadius="4dp"
+            card_view:cardElevation="8dp"
+            card_view:cardUseCompatPadding="true">
 
-    </android.support.v7.widget.CardView>
+            <ImageView
+                android:id="@+id/post_photo_IV"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bazo" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/photo_CV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="54dp"
-        app:cardBackgroundColor="#000000"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardUseCompatPadding="true"
-        card_view:cardElevation="8dp">
+        </android.support.v7.widget.CardView>
 
-        <ImageView
-            android:id="@+id/post_photo_IV"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/bazo" />
-
-    </android.support.v7.widget.CardView>
-
-
-</FrameLayout>
+    </FrameLayout>
+</ScrollView>
