--- a/Soloud/app/src/main/res/layout/activity_contests.xml
+++ b/Soloud/app/src/main/res/layout/activity_contests.xml
@@ -4,15 +4,11 @@
     xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-
-
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/image"
@@ -52,7 +48,7 @@
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
-                android:minHeight="?attr/actionBarSize"
+                android:minHeight="60dp"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
 
@@ -67,7 +63,6 @@
             android:id="@+id/progress_wheel"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:layout_marginBottom="48dp"
             android:visibility="gone"
@@ -80,7 +75,6 @@
             android:id="@+id/offline_IV"
             android:layout_width="72dp"
             android:layout_height="72dp"
-            android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:layout_marginBottom="48dp"
             android:visibility="gone"
@@ -88,24 +82,22 @@
             tools:visibility="visible" />
 
         <RelativeLayout
+            android:id="@+id/wizard_RL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#d9313131"
-            />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:background="@color/tutorial_background"
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <RelativeLayout
-                android:id="@+id/tutorial_RL"
+                android:id="@+id/bubble_RL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@color/mySecondary"
+                android:background="@android:color/white"
+                android:layout_centerInParent="true"
                 android:padding="16dp">
 
                 <TextView
@@ -113,23 +105,26 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/contests_description"
-                    android:textColor="@android:color/white"
-                    android:textSize="16sp" />
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
             </RelativeLayout>
 
             <View
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_below="@id/tutorial_RL"
+                android:id="@+id/triangle_View"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_below="@id/bubble_RL"
                 android:layout_marginLeft="36dp"
                 android:layout_marginStart="36dp"
                 android:background="@drawable/triangle"
                 android:rotation="180" />
 
             <ImageView
+                android:id="@+id/logo_IV"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:layout_below="@id/tutorial_RL"
+                android:layout_below="@id/bubble_RL"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
